# esp32_bme280_test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  start_command_2.bat
components/: CMakeLists.txt
components/bme280/: CMakeLists.txt
components/bme280/driver/: bme280_defs.h
components/spiffs/: CMakeLists.txt  spiffs_vfs.c
components/spiffs_image/: CMakeLists.txt  Makefile.projbuild
components/tft/: CMakeLists.txt  tftspi.c  tftspi.h
main/: Kconfig.projbuild  main.c
